--- a/src/main/webapp/mw/src/app/app.component.html
+++ b/src/main/webapp/mw/src/app/app.component.html
@@ -18,6 +18,15 @@
             <a routerLink="/welcome">Welcome</a>
           </li>
           <li nz-menu-item nzMatchRouter>
+            <a routerLink="/list">列表</a>
+          </li>
+          <li nz-menu-item nzMatchRouter>
+            <a routerLink="/test">测试</a>
+          </li>
+          <li nz-menu-item nzMatchRouter>
+            <a routerLink="/tree-list">树-列表</a>
+          </li>
+          <li nz-menu-item nzMatchRouter>
             <a>Monitor</a>
           </li>
           <li nz-menu-item nzMatchRouter>
