--- a/src/main/webapp/mw/src/app/pages/sider-frame/sider-frame.component.css
+++ b/src/main/webapp/mw/src/app/pages/sider-frame/sider-frame.component.css
@@ -1,14 +1,3 @@
-.center {
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  margin: -150px 0 0 -200px;
-  width: 400px;
-  height: 300px;
-  border: 1px solid red;
-}
-
-
 :host {
   display: flex;
   text-rendering: optimizeLegibility;
@@ -24,7 +13,7 @@
   position: relative;
   z-index: 10;
   min-height: 100vh;
-  box-shadow: 2px 0 6px rgba(0, 21, 41, .35);
+  box-shadow: 2px 0 6px rgba(0,21,41,.35);
 }
 
 .header-trigger {
@@ -32,7 +21,7 @@
   padding: 20px 24px;
   font-size: 20px;
   cursor: pointer;
-  transition: all .3s, padding 0s;
+  transition: all .3s,padding 0s;
 }
 
 .trigger:hover {
@@ -62,7 +51,7 @@
   color: #fff;
   font-weight: 600;
   font-size: 14px;
-  font-family: Avenir, Helvetica Neue, Arial, Helvetica, sans-serif;
+  font-family: Avenir,Helvetica Neue,Arial,Helvetica,sans-serif;
   vertical-align: middle;
 }
 
@@ -77,7 +66,7 @@ nz-header {
   height: 64px;
   padding: 0;
   background: #fff;
-  box-shadow: 0 1px 4px rgba(0, 21, 41, .08);
+  box-shadow: 0 1px 4px rgba(0,21,41,.08);
 }
 
 nz-content {
