xi ba 侧边栏跳转有问题

--- a/src/main/webapp/mw/src/app/pages/login/login/login.component.html
+++ b/src/main/webapp/mw/src/app/pages/login/login/login.component.html
@@ -20,7 +20,7 @@
           <span>Remember me</span>
         </label>
         <a class="login-form-forgot" class="login-form-forgot">Forgot password</a>
-        <button nz-button class="login-form-button" [nzType]="'primary'">Log in</button>
+        <button nz-button class="login-form-button"  [routerLink]="['./../frame']" [nzType]="'primary'">Log in</button>
         Or
         <a>register now!</a>
       </nz-form-control>
