--- a/src/main/webapp/mw/src/app/pages/sider-frame/sider-frame.component.html
+++ b/src/main/webapp/mw/src/app/pages/sider-frame/sider-frame.component.html
@@ -15,16 +15,16 @@
       <li nz-submenu nzOpen nzTitle="Dashboard" nzIcon="dashboard">
         <ul>
           <li nz-menu-item nzMatchRouter>
-            <a routerLink="/welcome">Welcome</a>
+            <a routerLink="./welcome" >Welcome</a>
           </li>
           <li nz-menu-item nzMatchRouter>
-            <a routerLink="/list">列表</a>
+            <a routerLink="template" >列表</a>
           </li>
           <li nz-menu-item nzMatchRouter>
-            <a routerLink="/test">测试</a>
+            <a routerLink="./test" >测试</a>
           </li>
           <li nz-menu-item nzMatchRouter>
-            <a routerLink="/tree-list">树-列表</a>
+            <a routerLink="./tree-list" >树-列表</a>
           </li>
           <li nz-menu-item nzMatchRouter>
             <a>Monitor</a>
