--- a/src/main/webapp/mw/src/app/pages/sider-frame/sider-frame.component.html
+++ b/src/main/webapp/mw/src/app/pages/sider-frame/sider-frame.component.html
@@ -12,7 +12,7 @@
       </a>
     </div>
     <ul nz-menu nzTheme="dark" nzMode="inline" [nzInlineCollapsed]="isCollapsed">
-      <li nz-submenu nzOpen nzTitle="Dashboard" nzIcon="dashboard">
+      <li nz-submenu nzOpen nzTitle="测试" nzIcon="dashboard">
         <ul>
           <li nz-menu-item nzMatchRouter>
             <a routerLink="welcome" >Welcome</a>
@@ -34,10 +34,10 @@
           </li>
         </ul>
       </li>
-      <li nz-submenu nzOpen nzTitle="Form" nzIcon="form">
+      <li nz-submenu nzOpen nzTitle="用户" nzIcon="github">
         <ul>
           <li nz-menu-item nzMatchRouter>
-            <a>Basic Form</a>
+            <a routerLink="./../login">退出</a>
           </li>
         </ul>
       </li>
